# risc-v-simulator

./: .gitignore  CMakeLists.txt  README.md
data/: answer.txt
src/: ALU.h  Cache.h  Control.h  Decoder.cpp  Decoder.h  Instruction.h  Instrution.cpp  LoadStoreBuffer.cpp  LoadStoreBuffer.h  Memory.cpp  Memory.h  Predictor.h  Register.h  ReorderBuffer.cpp  ReorderBuffer.h  ReservationStation.cpp  ReservationStation.h  bus.h  cpu.h  main.cpp
utils/: LoopList.h
